tools_services.yaml
apiVersion: v1
kind: Service
metadata:
  name: pypamposvc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: pypampo
---
apiVersion: v1
kind: Service
metadata:
  name: contamehistoriassvc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: contamehistorias
