app-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-resource
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /contamehistorias(/|$)(.*)
        backend:
          serviceName: contamehistoriassvc
          servicePort: 80
      - path: /pampo(/|$)(.*)
        backend:
          serviceName: pypamposvc
          servicePort: 80
      - path: /flasgger_static(/|$)(.*)
        backend:
          serviceName: flasggersvc
          servicePort: 80
      - path: /flasgger_static/lib/(/|$)(.*)
        backend:
          serviceName: flasggersvc
          servicePort: 80
